[project]
name = "pylss"
version = "0.1.0"
description = "Lynxmotion Smart Servo (LSS) Python Library"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []
authors = [
    { name = "Sebastien Parent-Charette", email = "support@robotshop.com"},
    { name = "Sebastian Plamauer", email = "sebastian.plamauer@motius.de"}
    ]
license = "LGPL-3.0-or-later"